# mcp-switchboard

./: .gitignore  Cargo.toml  README.md  check-build-progress.sh  clean_modules.sh  generate-build-fingerprint.sh  justfile  monitor-perfection.sh  perfect-binding-generator.sh  perfect-mcp-core.sh  run_with_approval.sh  test-full-build.sh  validate-fingerprints.sh  validate_just_idempotent_integrity.sh
binding-generator/: Cargo.toml  build.rs  package-lock.json  package.json  verify-contract.ts
binding-generator/bindings/: ApiError.ts  BuildInfo.ts  ChatErrorPayload.ts  ChatStreamPayload.ts  DependencyInfo.ts  ModelInfo.ts  StreamMessage.ts
binding-generator/src/: main.rs
mcp-core/: Cargo.toml  build.rs
mcp-core/src/: build_info.rs  config.rs  lib.rs
mcp-switchboard-ui/: .gitignore  README.md  TESTING.md  TESTING_SETUP.md  dev-restart.sh  dev-shutdown.sh  jest.config.cjs  lima-check.sh  lima-manager.sh  package-lock.json  package.json  setup-lima-env.sh  svelte.config.js  svelte.config.static.js  test-all.sh  test-e2e-all.sh  test-e2e-lima.sh  test-everything.sh  test-fast.sh  test-models.sh  test-verify.sh  vitest.config.ts
mcp-switchboard-ui/scripts/: inject-build-info.js
mcp-switchboard-ui/src/: app.d.ts  bindings.ts  test-setup.ts
mcp-switchboard-ui/src-tauri/: Cargo.toml  TS_FIXES.md  build.rs  compile-errors.txt  tauri.conf.json
mcp-switchboard-ui/src-tauri/src/: config.rs  main.rs
mcp-switchboard-ui/src/lib/: build-info.ts  help-system.test.ts  help-system.ts  model-api.test.ts  model-selection-e2e.test.ts  spotlight.test.ts  spotlight.ts  tauri.ts  test-utils.ts  validateTypeSystem.ts
mcp-switchboard-ui/src/lib/testing/: mockTauri.ts  typedCommands.test.ts
mcp-switchboard-ui/src/lib/testing/browser/: jest.setup.js  mock-tauri.js  spotlight.mock.js  spotlight.test.js  startup.mock.js  startup.test.js
mcp-switchboard-ui/src/lib/testing/browser/utils/: test-helpers.js
mcp-switchboard-ui/src/routes/: +layout.js  +page.svelte
scripts/: check-build.sh  show-versions.sh
threadbox/: Cargo.toml
