[workspace]
members = [
    "mcp-core",
    "binding-generator",
    "mcp-switchboard-ui/src-tauri"
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2.3.0", features = ["devtools"] }
tauri-build = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
anyhow = "1.0"