[package]
name = "threadbox"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

arrow = "56.0.0"
arrow-derive = "56.0.0"
parquet = { version = "56.0.0", features = ["arrow", "async"] }
object_store = "0.12.3"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10.1"