[package]
name = "mcp-switchboard-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
async-openai = "0.29.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
dirs = "5.0"
anyhow = "1.0"
gethostname = "0.4"

[dev-dependencies]
tempfile = "3.8"
