[package]
name = "mcp-switchboard-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
sha2 = "0.10"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dependencies]
mcp-core = { path = "../../mcp-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta = { version = "=2.0.0-rc.22" }

[dev-dependencies]
tempfile = "3.8"
